#if out some unreachable code that's apparently not yet supported. PR 50886 from David Binderman.